--- a/app/globals.css
+++ b/app/globals.css
@@ -18,9 +18,11 @@
     --foreground: #ededed;
   }
 }
+* {
+  font-family: 'Montserrat', sans-serif !important;
+}
 
 body {
   background: var(--background);
   color: var(--foreground);
-  font-family: Arial, Helvetica, sans-serif;
 }
